@@ -466,7 +466,8 @@ FILTER_NAME_ENDS 1          # Filter whitespace from beginning and end of player
 FILTER_NAME_MIDDLE 1        # Filter excess whitespace and other junk from the middle of player names.
 FILTER_COLOR_SERVER_NAMES 0 # Filter color codes from server names in the server browser.
 
-SILENCE_ALL 0      # silence all chat messages?
+SILENCE_ALL 0      # silence new players by default?
+ENABLE_CHAT 1      # allow public messages?
 
 # ladder constants
 
